<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<resources>
    <string name="editor_label">Text editor</string>

    <string name="editor_action_dismiss">Dismiss</string>
    <string name="editor_action_help">Help</string>
    <string name="editor_action_ignore">Ignore</string>
    <string name="editor_action_run">Run</string>
    <string name="editor_action_quit">Quit</string>
    <string name="editor_action_save">Save</string>
    <string name="editor_action_save_and_quit">Save &amp; quit</string>
    <string name="editor_action_undo">Undo</string>

    <string name="editor_error_title">Error</string>
    <string name="editor_error_open">Failed to open file</string>
    <string name="editor_error_read">Failed to read \'%1$s\'</string>

    <string name="editor_summary_loading">Loading…</string>
    <string name="editor_summary_info">Ln %1$d, Col %2$d</string>
    <string name="editor_summary_select">Selected %1$d chars, Ln %2$d, Col %3$d</string>

    <string name="editor_title_generic">this text file</string>

    <string name="editor_menu_new">New file</string>
    <string name="editor_menu_open">Open file</string>
    <string name="editor_menu_size">Text size</string>
    <string name="editor_menu_size_small">Small</string>
    <string name="editor_menu_size_medium">Medium</string>
    <string name="editor_menu_size_large">Large</string>
    <string name="editor_menu_font">Font style</string>
    <string name="editor_menu_font_mono">Monospace</string>
    <string name="editor_menu_font_sans">Sans serif</string>
    <string name="editor_menu_font_serif">Serif</string>
    <string name="editor_menu_options">Options</string>
    <string name="editor_menu_auto_pair">Auto pair</string>
    <string name="editor_menu_suggestions">Input suggestions</string>
    <string name="editor_menu_command">Command field</string>
    <string name="editor_menu_show_shell">Show app icon</string>
    <string name="editor_menu_help">Help</string>

    <string name="editor_command_hint">Type a command…</string>
    <string name="editor_command_not_implemented">Error: command not implemented</string>
    <string name="editor_command_unknown">Error: unknown or badly–formatted command</string>
    <string name="editor_command_find_none">Find: no match</string>
    <string name="editor_command_set_success">Applied</string>

    <string name="editor_save_quit_ask">Quit without saving changes to %1$s?</string>
    <string name="editor_save_in_progress">Saving \'%1$s\'…</string>
    <string name="editor_save_success">Saved</string>
    <string name="editor_save_failed">Failed to save \'%1$s\'</string>

    <string name="editor_snippet_save">Save as file</string>

    <string name="editor_shortcut_open_short">Open file</string>
    <string name="editor_shortcut_open_long">Open a file</string>
    <string name="editor_shortcut_open_disabled">Can\'t create open files</string>

    <string name="editor_help_label">Help</string>

    <string name="editor_help_error">Could not load help text</string>
</resources>
