<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/editorUndo"
        android:title="@string/editor_action_undo"
        android:icon="@drawable/ic_editor_undo"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="z"
        android:enabled="false"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/editorSave"
        android:title="@string/editor_action_save"
        android:icon="@drawable/ic_editor_save"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="s"
        android:enabled="false"
        android:showAsAction="always" />

    <item
        android:id="@+id/editorNew"
        android:showAsAction="never"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="n"
        android:title="@string/editor_menu_new" />

    <item
        android:id="@+id/editorOpen"
        android:showAsAction="never"
        android:alphabeticModifiers="CTRL"
        android:alphabeticShortcut="o"
        android:title="@string/editor_menu_open" />

    <item
        android:id="@+id/editorFontSize"
        android:showAsAction="never"
        android:title="@string/editor_menu_size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/editorFontSizeSmall"
                    android:title="@string/editor_menu_size_small" />
                <item
                    android:id="@+id/editorFontSizeMedium"
                    android:title="@string/editor_menu_size_medium"
                    android:checked="true" />
                <item
                    android:id="@+id/editorFontSizeLarge"
                    android:title="@string/editor_menu_size_large" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/editorFontStyle"
        android:showAsAction="never"
        android:title="@string/editor_menu_font">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/editorFontStyleMono"
                    android:title="@string/editor_menu_font_mono"
                    android:checked="true" />
                <item
                    android:id="@+id/editorFontStyleSans"
                    android:title="@string/editor_menu_font_sans" />
                <item
                    android:id="@+id/editorFontStyleSerif"
                    android:title="@string/editor_menu_font_serif" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/editorOptions"
        android:showAsAction="never"
        android:title="@string/editor_menu_options">
        <menu>
            <item
                android:id="@+id/editorAutoPair"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/editor_menu_auto_pair" />

            <item
                android:id="@+id/editorShowSuggestions"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/editor_menu_suggestions" />

            <item
                android:id="@+id/editorShowCommandBar"
                android:checkable="true"
                android:showAsAction="never"
                android:alphabeticModifiers="CTRL"
                android:alphabeticShortcut="/"
                android:title="@string/editor_menu_command" />

            <item
                android:id="@+id/editorShowShell"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/editor_menu_show_shell" />
        </menu>
    </item>

    <item
        android:id="@+id/editorHelp"
        android:showAsAction="never"
        android:alphabeticModifiers="FUNCTION"
        android:alphabeticShortcut="1"
        android:title="@string/editor_menu_help" />
</menu>
